hphp/test/zend/good/errmsg_021.php
<?php

class test extends stdclass {
}

$t = new test;

echo "Done\n";
?>